[FIX] version 1.0.1 of API

--- a/api/article/models/Article.settings.json
+++ b/api/article/models/Article.settings.json
@@ -70,6 +70,21 @@
     "website": {
       "model": "website",
       "via": "articles"
+    },
+    "views": {
+      "type": "integer"
+    },
+    "comments": {
+      "collection": "comment",
+      "via": "article"
+    },
+    "thread": {
+      "model": "article",
+      "via": "articles"
+    },
+    "articles": {
+      "collection": "article",
+      "via": "thread"
     }
   }
 }
