--- a/plugins/users-permissions/models/User.settings.json
+++ b/plugins/users-permissions/models/User.settings.json
@@ -60,6 +60,10 @@
     "website": {
       "model": "website",
       "via": "staff"
+    },
+    "comments": {
+      "collection": "comment",
+      "via": "user"
     }
   },
   "collectionName": "users-permissions_user"
