[fix] last commit

--- a/api/article/models/Article.settings.json
+++ b/api/article/models/Article.settings.json
@@ -85,6 +85,9 @@
     "articles": {
       "collection": "article",
       "via": "thread"
+    },
+    "slug": {
+      "type": "string"
     }
   }
 }
